# Programacao-Estruturada

./: .gitignore  CMakeLists.txt  README.md  duplamente_enc.c  duplamente_enc_2.c
EmSala/: recursividade.c  sala_01.c  sala_02.c  sala_03.c  sala_04.c
EmSala/menu/: menu.c
Lista0/: PE_01.c  PE_02.c  PE_03.c  PE_04.c  PE_05.c  PE_06.c  PE_07.c  PE_08.c  PE_09.c  PE_10.c  PE_11.c  PE_12.c  PE_13.c
Lista1/: PE_01.c  PE_02.c  PE_03.c  PE_04.c  PE_05.c
Listas/: duplamente_encadeadas.c  ordenacao.c  pilha_seq_lin.c  simplesmente_encadeada.c
Listas/exercícios/: 01.c  02.c
Recursividade/: 01.c  02.c
Revisão/: main  main.c
String/: 01a.c  01b.c  02.c  03.c  04.c  05.c
Vetores e Matrizes/: 01.c  02.c  03.c  04.c
chat/: chat_01.c  chat_02.c  chat_03.c  chat_04.c
exercícios/: 03_a.c  03_b.c  exercicios_do_meu_mano_gemini.md
liista 1/: 12.c  13.c
lista 0/: 11.c  13.c  14.c
lista 03/: 01.c  03.c
lista 3/: 01.c  main.c
lista 4/: 01.c  03.c  04.c
pessoal/: troca.c
