cmake_minimum_required(VERSION 3.2)
project(Programacao_Estruturada C)

set(CMAKE_C_STANDARD 11)

# Lista 0
add_executable(00_01 Lista0/PE_01.c)
add_executable(00_02 Lista0/PE_02.c)
add_executable(00_03 Lista0/PE_03.c)
add_executable(00_04 Lista0/PE_04.c)
add_executable(00_05 Lista0/PE_05.c)
add_executable(00_06 Lista0/PE_06.c)
add_executable(00_07 Lista0/PE_07.c)
add_executable(00_08 Lista0/PE_08.c)
add_executable(00_09 Lista0/PE_09.c)
add_executable(00_10 Lista0/PE_10.c)